force-app/main/default/objects/Assumption__c/Assumption__c.object-meta.xml
<CustomObject>
    <label>Assumption</label>
    <nameField>
        <displayFormat>FA-{00000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Assumptions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>