force-app/main/default/objects/Assumption__c/fields/Average_License_Price__c.field-meta.xml
<CustomField>
    <fullName>Average_License_Price__c</fullName>
    <label>Average License Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>