force-app/main/default/objects/Assumption__c/fields/Contract_Period__c.field-meta.xml
<CustomField>
    <fullName>Contract_Period__c</fullName>
    <label>Contract Period</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>