force-app/main/default/objects/Assumption__c/fields/Discounted_Receipts__c.field-meta.xml
<CustomField>
    <fullName>Discounted_Receipts__c</fullName>
    <label>Discounted Receipts %</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>