force-app/main/default/objects/Assumption__c/fields/Forecast_Duration__c.field-meta.xml
<CustomField>
    <fullName>Forecast_Duration__c</fullName>
    <description>In Months</description>
    <label>Forecast Duration</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>