force-app/main/default/objects/Assumption__c/fields/Forecasting_Quota__c.field-meta.xml
<CustomField>
    <fullName>Forecasting_Quota__c</fullName>
    <label>Forecasting Quota %</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>