force-app/main/default/objects/Assumption__c/fields/Recurring_Revenue_Billing_Cycle__c.field-meta.xml
<CustomField>
    <fullName>Recurring_Revenue_Billing_Cycle__c</fullName>
    <label>Recurring Revenue Billing Cycle</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <label>Monthly</label>
            </value>
            <value>
                <fullName>3</fullName>
                <label>Quarterly</label>
            </value>
            <value>
                <fullName>6</fullName>
                <label>Semi Annually</label>
            </value>
            <value>
                <fullName>12</fullName>
                <label>Annually</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>