force-app/main/default/objects/Assumption__c/fields/Revenue_GL_Account__c.field-meta.xml
<CustomField>
    <fullName>Revenue_GL_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Revenue GL Account</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>GL_Code__c.PL_Category__r.Type__c</field>
            <operation>equals</operation>
            <value>Revenue</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>GL_Code__c</referenceTo>
    <relationshipLabel>Assumptions</relationshipLabel>
    <relationshipName>Assumptions</relationshipName>
    <type>Lookup</type>
</CustomField>