force-app/main/default/objects/Assumption__c/recordTypes/Forcasting_Assumptions.recordType-meta.xml
<RecordType>
    <fullName>Forcasting_Assumptions</fullName>
    <active>true</active>
    <label>Forcasting Assumptions</label>
</RecordType>