force-app/main/default/objects/Assumption__c/recordTypes/Quota_Assumption.recordType-meta.xml
<RecordType>
    <fullName>Quota_Assumption</fullName>
    <active>true</active>
    <label>Quota Assumption</label>
</RecordType>