force-app/main/default/objects/Assumption__c/validationRules/Contract_Period_Validation_Rule.validationRule-meta.xml
<ValidationRule>
    <fullName>Contract_Period_Validation_Rule</fullName>
    <active>true</active>
    <errorConditionFormula>OR( Contract_Period__c &lt; 0,  Contract_Period__c &gt; 60,  Contract_Period__c &gt;  Forecast_Duration__c ,  ISBLANK(Contract_Period__c) )</errorConditionFormula>
    <errorMessage>Contract Period can not be greater than 60 and less than 0 and can not be greater than Forecast Duration.</errorMessage>
</ValidationRule>