force-app/main/default/objects/Assumption__c/validationRules/Discounted_Receipts_Validation_Rule.validationRule-meta.xml
<ValidationRule>
    <fullName>Discounted_Receipts_Validation_Rule</fullName>
    <active>true</active>
    <errorConditionFormula>OR( Discounted_Receipts__c &lt; 0,  Discounted_Receipts__c &gt; 1.0, ISBLANK(Discounted_Receipts__c) )</errorConditionFormula>
    <errorMessage>Discounted Receipts % can not be greater than 100% and less than 0.</errorMessage>
</ValidationRule>