force-app/main/default/objects/Assumption__c/validationRules/Forcast_Duration_Validation_Rule.validationRule-meta.xml
<ValidationRule>
    <fullName>Forcast_Duration_Validation_Rule</fullName>
    <active>true</active>
    <errorConditionFormula>OR( Forecast_Duration__c &gt; 60,  Forecast_Duration__c &lt; 0, ISBLANK(Forecast_Duration__c))</errorConditionFormula>
    <errorMessage>Forecast Duration can not be greater than 60 and less than 0.</errorMessage>
</ValidationRule>