force-app/main/default/objects/Assumption__c/validationRules/Hours_Per_Day_Validation_Rule.validationRule-meta.xml
<ValidationRule>
    <fullName>Hours_Per_Day_Validation_Rule</fullName>
    <active>true</active>
    <errorConditionFormula>OR( Hours_Per_day__c &lt; 0,  Hours_Per_day__c &gt; 12,  ISBLANK(Hours_Per_day__c) )</errorConditionFormula>
    <errorMessage>Hours Per day can not be greater than 12 and less than 0.</errorMessage>
</ValidationRule>